--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,18 @@
         android:theme="@style/Theme.Ecomerce"
         tools:targetApi="31">
         <activity
+            android:name=".autentication.CadastroActivity"
+            android:exported="false" />
+        <activity
+            android:name=".autentication.RecuperarsenhaActivity"
+            android:exported="false" />
+        <activity
             android:name=".autentication.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".activity.SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
