--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Ecomerce"
         tools:targetApi="31">
         <activity
+            android:name=".activity.loja.MainActivityEmpresa"
+            android:exported="false" />
+        <activity
             android:name=".autentication.CadastroActivity"
             android:exported="false" />
         <activity
