--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
 
     dependencies {
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath "com.android.tools.build:gradle:7.0.2"
 
     }
 }
