--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         tools:targetApi="31">
         <activity
             android:name=".activity.loja.MainActivityEmpresa"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".autentication.CadastroActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".autentication.RecuperarsenhaActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".autentication.LoginActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activity.app.SplashActivity"
             android:exported="true"
