--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,15 @@ buildscript {
 
     dependencies {
         // Add the dependency for the Google services Gradle plugin
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.3.10'
         classpath "com.android.tools.build:gradle:7.0.2"
 
     }
 }
 
 
-
-plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
+
 
