Adição da permissionListenner

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'devandroid.antonio.e_comerce'
-    compileSdk 31
+    compileSdk 33
 
     defaultConfig {
         applicationId "devandroid.antonio.e_comerce"
@@ -64,5 +64,8 @@ dependencies {
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-database")
     implementation("com.google.firebase:firebase-storage")
+
+    //Ted Permission
+    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
 }
